# graphite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt
cli/src/: main.cpp
examples/: library.graph  main.graph
lib/include/: core.hpp  parser.hpp  test.hpp
lib/src/: test.cpp
