set(CMAKE_PROJECT_MINIMUM_VERSION 3.20)
cmake_minimum_required(VERSION 3.20)

project(graphite
	VERSION 0.0.0
	LANGUAGES CXX
)

set(PROJECT_ACRONYM gr)
string(TOUPPER ${PROJECT_ACRONYM} PROJECT_ACRONYM_UPPERCASE)
set(PROJECT_CPP_DIALECT 23)

option(BUILD_TESTS "BUILD_TESTS" OFF)

add_subdirectory(lib)
add_subdirectory(cli)
if (BUILD_TESTS)
	add_subdirectory(tests)
endif()